--- a/views/adminUserGestion.html
+++ b/views/adminUserGestion.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Tableau de bord</title>
   <link rel="stylesheet" href="/public/adminUserGestion.css"/>
-  <link rel="icon" href="Image/Logo1.png">
+  <link rel="icon" href="/public/images/Logo1.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
