--- a/public/tableauDeBord.css
+++ b/public/tableauDeBord.css
@@ -37,6 +37,7 @@ header h1 {
   cursor: pointer;
   font-weight: 600;
   transition: background 0.3s, transform 0.2s;
+    font-family: 'Inter', sans-serif;
 }
 
 .Boutonorange .bouton:hover {
