--- a/public/adminUserGestion.css
+++ b/public/adminUserGestion.css
@@ -25,6 +25,7 @@ header {
 header h1 {
   font-size: 24px;
   font-weight: 700;
+  margin-right: 49vw;
 }
 
 .Boutonorange .bouton {
@@ -118,4 +119,8 @@ nav ul li a.active {
 
 .rangeeUser .dataUser {
      min-width: 18vw;
+}
+
+img {
+  width: 50px;
 }
