--- a/views/adminUserGestion.html
+++ b/views/adminUserGestion.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <img src="/public/images/Logo1.png" alt="">
         <h1>Tableau de bord</h1>
         <div class="Boutonorange">
             <button class="bouton">Profil</button>
