--- a/public/adminUserGestion.css
+++ b/public/adminUserGestion.css
@@ -97,9 +97,9 @@ nav ul li a.active {
 
 .enTeteUsers textarea {
     width: 200px;
-    padding: 0.5em;
+    padding: 1em;
     margin: 20px;
-    margin-bottom: 0;
+    padding-top: 25px;
     border: 2px solid #000;
     border-radius: 5px;
     resize: none;
