--- a/views/adminUserGestion.html
+++ b/views/adminUserGestion.html
@@ -14,7 +14,7 @@
         <h1>Tableau de bord</h1>
         <div class="Boutonorange">
             <button class="bouton">Profil</button>
-            <button class="bouton">Déconnexion</button>
+            <button class="boutonDeco">Déconnexion</button>
         </div>
     </header>
 
