--- a/views/adminUserGestion.html
+++ b/views/adminUserGestion.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="/public/images/Logo1.png" alt="">
+        <img src="/public/images/Logo1.png" alt="Logo du site">
         <h1>Tableau de bord</h1>
         <div class="Boutonorange">
             <button class="bouton">Profil</button>
@@ -39,7 +39,8 @@
         <div class="label">Prénom :</div>
         <div class="label">E-mail :</div>
         <div class="label">Rôle :</div>
-        <textarea name="rechercheUser" id="recherche" placeholder="Rechercher..."></textarea>
+        <input type="text" id="recherche" placeholder="Rechercher..."></textarea>
+        <img class="loupe" src="/public/images/loupe.png" alt="Image d'une loupe">
     </div>
 
     <div class="listeUsers">
@@ -48,24 +49,32 @@
             <div class="dataUser">Tan</div>
             <div class="dataUser">blabla@gmail.com</div>
             <div class="dataUser">Membre</div>
+            <button class="boutonRole">Changer le rôle</button>
+            <button class="boutonDesactiver">Desactiver</button>
         </div>   
         <div class="rangeeUser">
             <div class="dataUser">Gae</div>
             <div class="dataUser">Tan</div>
             <div class="dataUser">blabla@gmail.com</div>
             <div class="dataUser">Membre</div>
+            <button class="boutonRole">Changer le rôle</button>
+            <button class="boutonDesactiver">Desactiver</button>
         </div>   
         <div class="rangeeUser">
             <div class="dataUser">Gae</div>
             <div class="dataUser">Tan</div>
             <div class="dataUser">blabla@gmail.com</div>
             <div class="dataUser">Membre</div>
+            <button class="boutonRole">Changer le rôle</button>
+            <button class="boutonDesactiver">Desactiver</button>
         </div>   
         <div class="rangeeUser">
             <div class="dataUser">Gae</div>
             <div class="dataUser">Tan</div>
             <div class="dataUser">blabla@gmail.com</div>
             <div class="dataUser">Membre</div>
+            <button class="boutonRole">Changer le rôle</button>
+            <button class="boutonDesactiver">Desactiver</button>
         </div>   
     </div>
 </body>
