modif titre adminUserGestion

--- a/views/adminUserGestion.html
+++ b/views/adminUserGestion.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tableau de bord</title>
+  <title>Gestion des utilisateurs</title>
   <link rel="stylesheet" href="/public/adminUserGestion.css"/>
   <link rel="icon" href="/public/images/Logo1.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
     <header>
         <img src="/public/images/Logo1.png" alt="Logo du site">
-        <h1>Tableau de bord</h1>
+        <h1>Gestion des utilisateurs</h1>
         <div class="Boutonorange">
             <button class="bouton">Profil</button>
             <button class="boutonDeco">Déconnexion</button>
