--- a/views/adminUserGestion.html
+++ b/views/adminUserGestion.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Gestion des utilisateurs</title>
-  <link rel="stylesheet" href="/public/adminUserGestion.css"/>
-  <link rel="icon" href="/public/images/Logo1.png">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Tableau de bord</title>
+    <link rel="stylesheet" href="/public/adminUserGestion.css"/>
+    <link rel="icon" href="/public/images/Logo1.png">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <img src="/public/images/Logo1.png" alt="Logo du site">
-        <h1>Gestion des utilisateurs</h1>
+        <h1>Tableau de bord</h1>
         <div class="Boutonorange">
             <button class="bouton">Profil</button>
             <button class="boutonDeco">Déconnexion</button>
@@ -19,28 +19,30 @@
     </header>
 
     <nav class="navbar">
-  <div class="nav-container">
-    <ul class="nav-links">
-      <li><a href="#">Accueil</a></li>
-      <li><a href="#">Actualités</a></li>
-      <li><a href="#">Ateliers</a></li>
-      <li><a href="#">Historique</a></li>
-      <li><a href="#">Utilisateurs</a></li>
-      <li><a href="#">Créer un atelier</a></li>
-      <li><a href="#">Articles</a></li>
-      <li><a href="#">Newsletter</a></li>
-      <li><a class="active" href="#">Tableau de bord</a></li>
-    </ul>
-  </div>
-</nav>
+        <div class="nav-container">
+            <ul class="nav-links">
+            <li><a href="#">Accueil</a></li>
+            <li><a href="#">Actualités</a></li>
+            <li><a href="#">Ateliers</a></li>
+            <li><a href="#">Historique</a></li>
+            <li><a href="#">Utilisateurs</a></li>
+            <li><a href="#">Créer un atelier</a></li>
+            <li><a href="#">Articles</a></li>
+            <li><a href="#">Newsletter</a></li>
+            <li><a class="active" href="#">Tableau de bord</a></li>
+            </ul>
+        </div>
+    </nav>
 
     <div class="enTeteUsers">
         <div class="label">Nom :</div>
         <div class="label">Prénom :</div>
         <div class="label">E-mail :</div>
         <div class="label">Rôle :</div>
-        <input type="text" id="recherche" placeholder="Rechercher..."></textarea>
-        <img class="loupe" src="/public/images/loupe.png" alt="Image d'une loupe">
+        <div class="ensembleRecherche">
+            <input type="text" id="recherche" placeholder="Rechercher..."></textarea>
+            <img class="loupe" src="/public/images/loupe.png" alt="Image d'une loupe">
+        </div>
     </div>
 
     <div class="listeUsers">
@@ -77,5 +79,9 @@
             <button class="boutonDesactiver">Desactiver</button>
         </div>   
     </div>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
