--- a/views/newsletter-page.ejs
+++ b/views/newsletter-page.ejs
@@ -3,6 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= title %></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="/styleNewLetterDeroulant.css">
+</head>
+<body>
+    <div class="live-region" aria-live="polite" aria-atomic="true" id="announcements"></div>
+    <%- include('partials/header') %>
+    <% -include ('partials/nav-bar')%>
+
+ 
+    <script src="/newsletter.js"></script>
+</body>
+</html>
+
+
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Envoi de la newsletter</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="../public/styleNewLetterDeroulant.css">
