--- a/views/partials/nav-bar.ejs
+++ b/views/partials/nav-bar.ejs
@@ -1,15 +1,11 @@
-
-<nav class="navbar">
-  <div class="nav-container">
-    <ul class="nav-links">
-      <li><a href="#">Actualités</a></li>
-      <li><a href="#">Ateliers</a></li>
-      <li><a href="#">Historique</a></li>
-      <li><a href="#">Utilisateurs</a></li>
-      <li><a href="#">Créer un atelier</a></li>
-      <li><a href="#">Articles</a></li>
-      <li><a href="#">Newsletter</a></li>
-      <li><a class="active" href="#">Tableau de bord</a></li>
-    </ul>
-  </div>
-</nav>
+<nav class="navbar" aria-label="Menu principal">
+  <a href="#" aria-label="Actualités">Actualités</a>
+  <a href="#" aria-label="Ateliers">Ateliers</a>
+  <a href="#" aria-label="Historique">Historique</a>
+  <a href="#" aria-label="Utilisateurs">Utilisateurs</a>
+  <a href="#" aria-label="Créer un atelier">Créer un atelier</a>
+  <a href="#" aria-label="Articles">Articles</a>
+  <a href ="#" aria-label ="erwan">erwan </a>
+  <a class="active" href="#" aria-current="page" aria-label="Newsletter (page actuelle)">Tableau de bord</a>
+  <a href ="/adminUserGestion.html" aria-label="Gestion utilisateurs">Utilisateurs</a>
+</nav
