--- a/views/adminUserGestion.html
+++ b/views/adminUserGestion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Tableau de bord</title>
+    <title>Gestion des utilisateurs</title>
     <link rel="stylesheet" href="/public/adminUserGestion.css"/>
     <link rel="icon" href="/public/images/Logo1.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -11,8 +11,9 @@
 <body>
     <header>
         <img src="/public/images/Logo1.png" alt="Logo du site">
-        <h1>Tableau de bord</h1>
+        <h1>Gestion des utilisateurs</h1>
         <div class="Boutonorange">
+            <button class="font-btn" onclick="increaseFontSize()" title="Augmenter la taille du texte">A+</button>
             <button class="bouton">Profil</button>
             <button class="boutonDeco">Déconnexion</button>
         </div>
@@ -25,11 +26,12 @@
             <li><a href="#">Actualités</a></li>
             <li><a href="#">Ateliers</a></li>
             <li><a href="#">Historique</a></li>
-            <li><a href="#">Utilisateurs</a></li>
+            <li><a class="active" href="#">Gestion utilisateurs</a></li>
+            <li><a href="#">Gestion ateliers</a></li>
             <li><a href="#">Créer un atelier</a></li>
             <li><a href="#">Articles</a></li>
             <li><a href="#">Newsletter</a></li>
-            <li><a class="active" href="#">Tableau de bord</a></li>
+            <li><a href="#">Tableau de bord</a></li>
             </ul>
         </div>
     </nav>
@@ -83,5 +85,6 @@
     <footer>
 
     </footer>
+    <script src="../public/adminUserGestion.js"></script>
 </body>
 </html>
