--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/newsletter-page">newsletter-page</a>
-    <%= message %>
+    <a href="/newsletter-page">Envoi d'une newsletter</a> <%= message %>
+    <a href="/admin-article">Publication d'article</a><%= message %>
+   
 </body>
 </html>
