--- a/views/partials/nav-bar.ejs
+++ b/views/partials/nav-bar.ejs
@@ -1,11 +1,10 @@
-<nav class="navbar" aria-label="Menu principal">
-  <a href="#" aria-label="Actualités">Actualités</a>
-  <a href="#" aria-label="Ateliers">Ateliers</a>
-  <a href="#" aria-label="Historique">Historique</a>
-  <a href="#" aria-label="Utilisateurs">Utilisateurs</a>
-  <a href="#" aria-label="Créer un atelier">Créer un atelier</a>
-  <a href="#" aria-label="Articles">Articles</a>
-  <a href ="#" aria-label ="erwan">erwan </a>
-  <a class="active" href="#" aria-current="page" aria-label="Newsletter (page actuelle)">Tableau de bord</a>
-  <a href ="/adminUserGestion.html" aria-label="Gestion utilisateurs">Utilisateurs</a>
-</nav
+  
+    <nav aria-label="Menu principal">
+        <a href="#" aria-label="Voir les ateliers disponibles">Ateliers</a>
+        <a href="#" aria-label="Consulter l'historique">Historique</a>
+        <a href="#" aria-label="Gérer les utilisateurs">Gestion utilisateurs</a>
+        <a href="#" aria-label="Créer un nouvel atelier">Création d'atelier</a>
+        <a href="#" aria-label="Publication d'article ">Publication d'article</a>
+        <a href="#" aria-label="Envoyer la newsletter">Envoyer newsletter</a>
+        <a href="#" aria-label="Voir le tableau de bord">Tableau de bord</a>
+    </nav>
