--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/newsletter-page">Envoi d'une newsletter</a> <%= message %>
+    <a href="/newsletter-page">Envoi d'une newsletter</a> <%= message %></br>
     <a href="/admin-article">Publication d'article</a><%= message %>
    
 </body>
