--- a/views/newsletter-page.ejs
+++ b/views/newsletter-page.ejs
@@ -48,6 +48,7 @@
     </main>
 
   <%- include('partials/footer') %>
-    <script src="/javascript/newsletter.js"></script>
+    <script src="/javascript/accessibility.js"></script>
+    <script src="/javascript/newsletterPage.js"></script>
 </body>
 </html>
