--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,8 @@
 </head>
 <body>
     <a href="/newsletter-page">Envoi d'une newsletter</a> <%= message %></br>
-    <a href="/admin-article">Publication d'article</a><%= message %>
+    <a href="/admin-article">Publication d'article</a><%= message %></br>
+    <a href="/adminUserGestion">Gestion des utilisateurs</a><%= message %></br>
    
 </body>
 </html>
