--- a/public/css/styleNewLetterDeroulant.css
+++ b/public/css/styleNewLetterDeroulant.css
@@ -7,6 +7,8 @@
 html {
     font-size: 18px;
     /* la norme en général c'est 16px mais pour les malvoyants c'est 18px */
+    text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 }
 
 body {
@@ -67,7 +69,7 @@ body {
    HEADER
    =============================== */
 header {
-    background: #f4a300;
+    background: linear-gradient(135deg, #4db8ff 0%, #0057b8 100%);
     color: #000;
     padding: 14px;
     position: relative;
@@ -100,7 +102,7 @@ img{
     color: #000;
 }
 .logo{
-  width: 50px;      /* adapte la taille à ton besoin */
+  width: 50px;     
     height: auto;
     margin-right: 10px;  
 }
