Opti css adminUserGestion ajout adminAtelierGestion html & css ajout lien sur index ajout route sur serv

--- a/views/adminUserGestion.ejs
+++ b/views/adminUserGestion.ejs
@@ -85,6 +85,6 @@
     </div>
 
     <%- include('partials/footer') %>
-    <script src="javascript/adminUserGestion.js"></script>
+    <!-- <script src="javascript/adminUserGestion.js"></script> -->
 </body>
 </html>
