--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     <a href="/newsletter-page">Envoi d'une newsletter</a> <%= message %></br>
     <a href="/admin-article">Publication d'article</a><%= message %></br>
     <a href="/adminUserGestion">Gestion des utilisateurs</a><%= message %></br>
+    <a href="/adminAtelierGestion">Gestion des ateliers</a><%= message %></br>
    
 </body>
 </html>
